Fixed main thumbnail size on mobile

--- a/public/assets/styles/main.css
+++ b/public/assets/styles/main.css
@@ -2022,7 +2022,7 @@ footer {
     margin-top: 0;
   }
   .slider-top__for picture {
-    width: 100%;
+    max-width: 100%;
     height: 100%;
   }
   .slider-top__for img {
