--- a/public/assets/styles/partials/_media-queries.scss
+++ b/public/assets/styles/partials/_media-queries.scss
@@ -29,7 +29,7 @@
     margin-top : 0;
 
     picture {
-      width : 100%;
+      max-width : 100%;
       height : 100%;
     }
 
